--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "axios": "^0.20.0",
+    "es6-promise": "^4.2.8",
+    "vue": "^2.5.11",
+    "vuex": "^3.5.1"
   },
   "browserslist": [
     "> 1%",
@@ -28,7 +31,8 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
+    "vue-svg-loader": "^0.16.0",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
