--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "stylelint": "^13.7.1",
+    "stylelint-config-sass-guidelines": "^7.1.0",
+    "stylelint-config-standard": "^20.0.0",
     "vue-loader": "^13.0.5",
     "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.12",
