--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "es6-promise": "^4.2.8",
+    "eslint-plugin-vue": "^6.2.2",
     "vue": "^2.5.11",
     "vuex": "^3.5.1"
   },
@@ -27,6 +28,8 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "eslint": "^7.9.0",
+    "eslint-loader": "^4.0.2",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
