--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "axios": "^0.20.0",
     "es6-promise": "^4.2.8",
-    "eslint-plugin-vue": "^6.2.2",
     "vue": "^2.5.11",
     "vuex": "^3.5.1"
   },
@@ -29,7 +28,10 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "eslint": "^7.9.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-vue": "^7.0.0-beta.3",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
